<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/alerts">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_notifyme"
            android:title="@string/title_new_alert"
            android:summary="@string/summary_alert" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/key_notifyme"
            android:key="@string/key_new_alert_ringtone"
            android:ringtoneType="notification"
            android:showSilent="true"
            android:showDefault="true"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate"
            android:dependency="@string/key_notifyme" />
    </PreferenceCategory>
</PreferenceScreen>